Specify source and target versions on javac invocations.

--- a/ant.properties
+++ b/ant.properties
@@ -1,3 +1,6 @@
+ant.build.javac.source            1.4
+ant.build.javac.target            1.4
+
 servlet.lib.jar                   ${env.SERVLET_LIB_JAR}
 echo3.app.lib.jar                 ${env.ECHO3_LIB_HOME}/Echo3_App.jar
 echo3.webcontainer.lib.jar        ${env.ECHO3_LIB_HOME}/Echo3_WebContainer.jar
