Incorporated the download command as ported from echo2 by Kruntz, with minor refactorings.  Cheers Kruntz!

--- a/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
+++ b/src/webcontainer/java/META-INF/nextapp/echo/SynchronizePeerBindings.properties
@@ -27,3 +27,4 @@
 
 # Echo3 FileTransfer Component Synchronize Peers
 nextapp.echo.filetransfer.app.UploadSelect		nextapp.echo.filetransfer.webcontainer.sync.component.UploadSelectPeer
+nextapp.echo.filetransfer.app.DownloadCommand	nextapp.echo.filetransfer.webcontainer.sync.component.DownloadCommandPeer
