Changes so that a checkout of echo3 is not necessary just for building the JARS.  It is still required for building the test app.

--- a/ant.properties
+++ b/ant.properties
@@ -4,8 +4,8 @@ ant.build.javac.target            1.4
 echo3.home                        ${env.ECHO3_HOME}
 
 servlet.lib.jar                   ${env.SERVLET_LIB_JAR}
-echo3.app.lib.jar                 ${echo3.home}/dist/lib/Echo3_App.jar
-echo3.webcontainer.lib.jar        ${echo3.home}/dist/lib/Echo3_WebContainer.jar
+echo3.app.lib.jar                 ${env.ECHO3_LIB_HOME}/Echo3_App.jar
+echo3.webcontainer.lib.jar        ${env.ECHO3_LIB_HOME}/Echo3_WebContainer.jar
 ft.commons-io.lib.jar			  lib/commons-io-1.3.2.jar
 ft.commons-fileupload.lib.jar	  lib/commons-fileupload-1.2.jar
 
