--- a/build.xml
+++ b/build.xml
@@ -429,10 +429,11 @@
     <target name="jslint.webcontainer">
         <java fork="true" jar="${dir.resource.jslint}/rhino.jar">
             <arg value="${dir.resource.jslint}/jslint.js"/>
+            <arg value="${dir.src.client.filetransfer}/"/>
             <arg value="${dir.src.server-java.webcontainer.res}/"/>
         </java>
     </target>
-
+    
     <target name="jslint" depends="jslint.webcontainer">
     </target>
 
