--- a/ant.properties
+++ b/ant.properties
@@ -1,4 +1,5 @@
-release.version                         3.0.b7+
+release.version                         3.0
+echo.version                            3.0
 
 echo3.home                              ${env.ECHO3_HOME}
 
@@ -6,21 +7,25 @@ ant.build.javac.source                  1.4
 ant.build.javac.target                  1.4
 
 servlet.lib.jar                         ${env.SERVLET_LIB_JAR}
-echo3.app.lib.jar                       ${env.ECHO3_LIB_HOME}/Echo3_App.jar
-echo3.webcontainer.lib.jar              ${env.ECHO3_LIB_HOME}/Echo3_WebContainer.jar
-filetransfer.commons-io.lib.jar			lib/commons-io-1.3.2.jar
+echo3.app.lib.jar                       ${env.ECHO3_LIB_HOME}/echo3-app-${echo.version}.jar
+echo3.webcontainer.lib.jar              ${env.ECHO3_LIB_HOME}/echo3-webcontainer-${echo.version}.jar
+filetransfer.commons-io.lib.jar			    lib/commons-io-1.3.2.jar
 filetransfer.commons-fileupload.lib.jar	lib/commons-fileupload-1.2.jar
 
 debug                                   yes
-jarfile.filetransfer.model              Echo3_FileTransfer_Model.jar
-jarfile.filetransfer.receiver           Echo3_FileTransfer_Receiver.jar
-jarfile.filetransfer.app                Echo3_FileTransfer_App.jar
-jarfile.filetransfer.webcontainer       Echo3_FileTransfer_WebContainer.jar
+jarfile.filetransfer.model              echo3-filetransfer-model-${release.version}.jar
+jarfile.filetransfer.receiver           echo3-filetransfer-receiver-${release.version}.jar
+jarfile.filetransfer.app                echo3-filetransfer-app-${release.version}.jar
+jarfile.filetransfer.webcontainer       echo3-filetransfer-webcontainer-${release.version}.jar
+srcfile.filetransfer.model              echo3-filetransfer-model-${release.version}-sources.jar
+srcfile.filetransfer.receiver           echo3-filetransfer-receiver-${release.version}-sources.jar
+srcfile.filetransfer.app                echo3-filetransfer-app-${release.version}-sources.jar
+srcfile.filetransfer.webcontainer       echo3-filetransfer-webcontainer-${release.version}-sources.jar
 warfile.testapp                         FileTransferTest.war
-fileprefix.release                      NextApp_Echo_FileTransfer
-zipfile.release                         ${fileprefix.release}.${release.version}.zip
-tarfile.release                         ${fileprefix.release}.${release.version}.tar
-tgzfile.release                         ${fileprefix.release}.${release.version}.tgz
+fileprefix.release                      ${ant.project.name}
+zipfile.release                         ${fileprefix.release}-${release.version}.zip
+tarfile.release                         ${fileprefix.release}-${release.version}.tar
+tgzfile.release                         ${fileprefix.release}-${release.version}.tgz
 
 dir.temp                                tmp
 
@@ -64,7 +69,7 @@ dir.build.server-java.webcontainer      ${dir.build.server-java}/webcontainer
 dir.build.server-java.webcontainer.res  ${dir.build.server-java.webcontainer}/nextapp/echo/filetransfer/webcontainer/resource
 dir.build.server-java.testapp           ${dir.build.server-java}/testapp
 dir.build.release                       ${dir.build}/release
-dir.build.release.root                  ${dir.build.release}/NextApp_Echo3_FileTransfer
+dir.build.release.root                  ${dir.build.release}/${ant.project.name}
 
 dir.dist                                dist
 dir.dist.lib                            ${dir.dist}/lib
