--- a/ant.properties
+++ b/ant.properties
@@ -1,4 +1,4 @@
-release.version                         3.0
+release.version                         3.1.0-SNAPSHOT
 echo.version                            3.0
 
 echo3.home                              ${env.ECHO3_HOME}
