--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
  * the terms of any one of the MPL, the GPL or the LGPL.
 --> 
  
-<project name="echo3-filetransfer" default="dist" basedir=".">
+<project name="echo3-filetransfer" default="dist" basedir="." xmlns:artifact="antlib:org.apache.maven.artifact.ant">
 
     <property environment="env"/>
     <property file="custom-ant.properties"/>
@@ -52,11 +52,43 @@
         <include name="**/*gif"/>
         <include name="**/*xml"/>
     </patternset>
-    
+
+    <target name="-check.dependencies">
+        <available file="${dir.lib}/echo3-app-${echo.version}.jar" property="dependencies.present"/>
+    </target>
+
+    <target name="mvn.dependencies" depends="-mvn.inittasks"
+            description="Fetches the required dependencies from Maven Central into the lib dir">
+
+        <artifact:dependencies filesetId="dependency.fileset">
+            <dependency groupId="com.nextapp" artifactId="echo3-app" version="${echo.version}"/>
+            <dependency groupId="com.nextapp" artifactId="echo3-app" version="${echo.version}" classifier="sources"/>
+            <dependency groupId="com.nextapp" artifactId="echo3-webcontainer" version="${echo.version}"/>
+            <dependency groupId="com.nextapp" artifactId="echo3-webcontainer" version="${echo.version}" classifier="sources"/>
+            <dependency groupId="javax.servlet" artifactId="servlet-api" version="2.4"/>
+            <dependency groupId="javax.servlet" artifactId="servlet-api" version="2.4" classifier="sources"/>
+            <dependency groupId="commons-io" artifactId="commons-io" version="1.3.2"/>
+            <dependency groupId="commons-io" artifactId="commons-io" version="1.3.2" classifier="sources"/>
+            <dependency groupId="commons-fileupload" artifactId="commons-fileupload" version="1.2"/>
+            <dependency groupId="commons-fileupload" artifactId="commons-fileupload" version="1.2" classifier="sources"/>
+        </artifact:dependencies>
+
+        <copy todir="${dir.lib}">
+            <fileset refid="dependency.fileset" />
+            <mapper type="flatten" />
+        </copy>
+    </target>
+
+    <target name="dependencies" depends="-check.dependencies" unless="dependencies.present"
+            description="Spot checks for dependency JARs availability and fetches via Maven Central if required">
+        <antcall target="mvn.dependencies"/>
+    </target>
+
     <!-- Minimize -->
     <target name="minimize" depends="clean" 
             description="Removes all non-essential files, including Eclipse temporary/build output files">
         <delete dir="${dir.temp}"/>
+        <delete dir="${dir.lib}"/>
     </target>
     
     <!-- Clean -->
@@ -68,8 +100,8 @@
         <delete dir="${dir.testoutput}"/>
         <delete dir="${dir.release}"/>
     </target>
-    
-    <target name="compile.model" description="Compile model source files">
+
+    <target name="compile.model" description="Compile model source files" depends="dependencies">
         <mkdir dir="${dir.build.server-java.model}"/>
         <javac srcdir="${dir.src.server-java.model}" destdir="${dir.build.server-java.model}" 
                 debug="${debug}" deprecation="yes" includeantruntime="false"
@@ -371,7 +403,14 @@
     <target name="doc.private" 
             depends="doc.model.private, doc.receiver.private, doc.app.private, doc.webcontainer.private"/>
 
-    <target name="doc" 
+    <target name="doc.jars" depends="doc.public" description="Builds the *-javadoc.jar files">
+        <jar jarfile="${dir.dist.lib}/${docfile.filetransfer.model}" basedir="${dir.javadoc.model.public}"/>
+        <jar jarfile="${dir.dist.lib}/${docfile.filetransfer.receiver}" basedir="${dir.javadoc.receiver.public}"/>
+        <jar jarfile="${dir.dist.lib}/${docfile.filetransfer.app}" basedir="${dir.javadoc.app.public}"/>
+        <jar jarfile="${dir.dist.lib}/${docfile.filetransfer.webcontainer}" basedir="${dir.javadoc.webcontainer.public}"/>
+    </target>
+
+    <target name="doc"
             depends="doc.model, doc.model.private, doc.receiver, doc.receiver.private, doc.app, doc.app.private, doc.webcontainer, doc.webcontainer.private"/>
 	
     <target name="release" depends="clean, dist, dist.testapp, doc.public">
@@ -434,7 +473,144 @@
         <gzip src="${dir.release}/${tarfile.release}" zipfile="${dir.release}/${tgzfile.release}"/>
         <delete file="${dir.release}/${tarfile.release}"/>
     </target>
-    
+
+    <target name="-mvn.generate.pom">
+        <mkdir dir="${dir.build}/maven-pom"/>
+        <copy todir="${dir.build}/maven-pom" filtering="true" overwrite="true">
+            <fileset dir="resource/maven" includes="*.xml"/>
+            <filterset id="maven.pom.filters" begintoken="$${" endtoken="}">
+                <filter token="release.version" value="${release.version}"/>
+                <filter token="echo.version" value="${echo.version}"/>
+            </filterset>
+        </copy>
+    </target>
+
+    <target name="mvn.install" depends="dist, doc.jars, -mvn.generate.pom, -mvn.inittasks"
+            description="Installs the current release into the local maven repository">
+        <!-- Install Filetransfer API module -->
+        <artifact:pom id="app-pom" file="${dir.build}/maven-pom/echo3-filetransfer-app-pom.xml" />
+        <artifact:install file="${dir.dist.lib}/${jarfile.filetransfer.app}">
+            <pom refid="app-pom"/>
+            <attach file="${dir.dist.lib}/${srcfile.filetransfer.app}" type="jar" classifier="sources"/>
+            <attach file="${dir.dist.lib}/${docfile.filetransfer.app}" type="jar" classifier="javadoc"/>
+        </artifact:install>
+
+        <!-- Install Filetransfer Web Servlet module -->
+        <artifact:pom id="webcontainer-pom" file="${dir.build}/maven-pom/echo3-filetransfer-webcontainer-pom.xml" />
+        <artifact:install file="${dir.dist.lib}/${jarfile.filetransfer.webcontainer}">
+            <pom refid="app-pom"/>
+            <attach file="${dir.dist.lib}/${srcfile.filetransfer.webcontainer}" type="jar" classifier="sources"/>
+            <attach file="${dir.dist.lib}/${docfile.filetransfer.webcontainer}" type="jar" classifier="javadoc"/>
+        </artifact:install>
+
+        <!-- Install Filetransfer Model -->
+        <artifact:pom id="model-pom" file="${dir.build}/maven-pom/echo3-filetransfer-model-pom.xml" />
+        <artifact:install file="${dir.dist.lib}/${jarfile.filetransfer.model}">
+            <pom refid="model-pom"/>
+            <attach file="${dir.dist.lib}/${srcfile.filetransfer.model}" type="jar" classifier="sources"/>
+            <attach file="${dir.dist.lib}/${docfile.filetransfer.model}" type="jar" classifier="javadoc"/>
+        </artifact:install>
+
+        <!-- Install Filetransfer Receiver -->
+        <artifact:pom id="receiver-pom" file="${dir.build}/maven-pom/echo3-filetransfer-receiver-pom.xml" />
+        <artifact:install file="${dir.dist.lib}/${jarfile.filetransfer.model}">
+            <pom refid="receiver-pom"/>
+            <attach file="${dir.dist.lib}/${srcfile.filetransfer.receiver}" type="jar" classifier="sources"/>
+            <attach file="${dir.dist.lib}/${docfile.filetransfer.receiver}" type="jar" classifier="javadoc"/>
+        </artifact:install>
+    </target>
+
+    <target name="mvn.snapshot" depends="dist, doc.jars, -mvn.generate.pom, -mvn.inittasks"
+            description="Deploy snapshot version to configured Maven snapshot repository">
+        <!-- The artifact:deploy tasks do not repesct settings.xml for proxy/auth, so we use the mvn task -->
+        <!-- Deploy Echo API module. -->
+        <artifact:mvn>
+            <arg value="org.apache.maven.plugins:maven-deploy-plugin:2.6:deploy-file" />
+            <arg value="-Durl=${maven.repository.snapshots.url}" />
+            <arg value="-DrepositoryId=${maven.repository.snapshots.id}" />
+            <arg value="-DpomFile=${dir.build}/maven-pom/echo3-filetransfer-app-pom.xml" />
+            <arg value="-Dfile=${dir.dist.lib}/${jarfile.filetransfer.app}" />
+            <arg value="-Dsources=${dir.dist.lib}/${srcfile.filetransfer.app}" />
+            <arg value="-Djavadoc=${dir.dist.lib}/${docfile.filetransfer.app}" />
+            <arg value="-e" />
+        </artifact:mvn>
+        <artifact:mvn>
+            <arg value="org.apache.maven.plugins:maven-deploy-plugin:2.6:deploy-file" />
+            <arg value="-Durl=${maven.repository.snapshots.url}" />
+            <arg value="-DrepositoryId=${maven.repository.snapshots.id}" />
+            <arg value="-DpomFile=${dir.build}/maven-pom/echo3-filetransfer-webcontainer-pom.xml" />
+            <arg value="-Dfile=${dir.dist.lib}/${jarfile.filetransfer.webcontainer}" />
+            <arg value="-Dsources=${dir.dist.lib}/${srcfile.filetransfer.webcontainer}" />
+            <arg value="-Djavadoc=${dir.dist.lib}/${docfile.filetransfer.webcontainer}" />
+            <arg value="-e" />
+        </artifact:mvn>
+        <artifact:mvn>
+            <arg value="org.apache.maven.plugins:maven-deploy-plugin:2.6:deploy-file" />
+            <arg value="-Durl=${maven.repository.snapshots.url}" />
+            <arg value="-DrepositoryId=${maven.repository.snapshots.id}" />
+            <arg value="-DpomFile=${dir.build}/maven-pom/echo3-filetransfer-model-pom.xml" />
+            <arg value="-Dfile=${dir.dist.lib}/${jarfile.filetransfer.model}" />
+            <arg value="-Dsources=${dir.dist.lib}/${srcfile.filetransfer.model}" />
+            <arg value="-Djavadoc=${dir.dist.lib}/${docfile.filetransfer.model}" />
+            <arg value="-e" />
+        </artifact:mvn>
+        <artifact:mvn>
+            <arg value="org.apache.maven.plugins:maven-deploy-plugin:2.6:deploy-file" />
+            <arg value="-Durl=${maven.repository.snapshots.url}" />
+            <arg value="-DrepositoryId=${maven.repository.snapshots.id}" />
+            <arg value="-DpomFile=${dir.build}/maven-pom/echo3-filetransfer-receiver-pom.xml" />
+            <arg value="-Dfile=${dir.dist.lib}/${jarfile.filetransfer.receiver}" />
+            <arg value="-Dsources=${dir.dist.lib}/${srcfile.filetransfer.receiver}" />
+            <arg value="-Djavadoc=${dir.dist.lib}/${docfile.filetransfer.receiver}" />
+            <arg value="-e" />
+        </artifact:mvn>
+    </target>
+
+    <target name="mvn.stage" depends="dist, doc.jars, -mvn.generate.pom, -mvn.inittasks"
+            description="Deploy snapshot version to configured Maven snapshot repository">
+        <macrodef name="deploysigned">
+            <attribute name="module"/>
+            <attribute name="file"/>
+            <attribute name="classifier"/>
+
+            <sequential>
+                <artifact:mvn>
+                    <arg value="org.apache.maven.plugins:maven-gpg-plugin:1.3:sign-and-deploy-file" />
+                    <arg value="-Durl=${maven.repository.staging.url}" />
+                    <arg value="-DrepositoryId=${maven.repository.staging.id}" />
+                    <arg value="-DpomFile=${dir.build}/maven-pom/echo3-filetransfer-@{module}-pom.xml" />
+                    <arg value="-Dfile=${dir.dist.lib}/@{file}" />
+                    <arg value="-Dclassifier=@{classifier}" />
+                    <arg value="-e" />
+                    <arg value="-Pgpg" />
+                </artifact:mvn>
+            </sequential>
+        </macrodef>
+
+        <deploysigned module="app" classifier=""        file="${jarfile.filetransfer.app}"/>
+        <deploysigned module="app" classifier="sources" file="${srcfile.filetransfer.app}"/>
+        <deploysigned module="app" classifier="javadoc" file="${docfile.filetransfer.app}"/>
+
+        <deploysigned module="webcontainer" classifier=""        file="${jarfile.filetransfer.app}"/>
+        <deploysigned module="webcontainer" classifier="sources" file="${srcfile.filetransfer.app}"/>
+        <deploysigned module="webcontainer" classifier="javadoc" file="${docfile.filetransfer.app}"/>
+
+        <deploysigned module="receiver" classifier=""        file="${jarfile.filetransfer.app}"/>
+        <deploysigned module="receiver" classifier="sources" file="${srcfile.filetransfer.app}"/>
+        <deploysigned module="receiver" classifier="javadoc" file="${docfile.filetransfer.app}"/>
+
+        <deploysigned module="model" classifier=""        file="${jarfile.filetransfer.app}"/>
+        <deploysigned module="model" classifier="sources" file="${srcfile.filetransfer.app}"/>
+        <deploysigned module="model" classifier="javadoc" file="${docfile.filetransfer.app}"/>
+
+    </target>
+
+    <target name="-mvn.inittasks" unless="mvntasks.initialized">
+        <taskdef resource="de/exxcellent/ant/tasks.properties" classpath="resource/maven/ant-exxtasks-1.0.jar"/>
+        <extendclasspath path="resource/maven/maven-ant-tasks-2.1.3.jar"/>
+        <available property="mvntasks.initialized" classname="org.apache.maven.project.MavenProject"/>
+    </target>
+
     <target name="jslint.webcontainer">
         <java fork="true" jar="${dir.resource.jslint}/rhino.jar">
             <arg value="${dir.resource.jslint}/jslint.js"/>
